Creation Database and Register Api and UserModel

--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "mongoose": "^8.7.2",
     "next": "14.2.15",
     "next-auth": "^4.24.8",
